--- a/deploy/redis.yml
+++ b/deploy/redis.yml
@@ -31,11 +31,16 @@ spec:
     requests:
       storage: 1Gi
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-master
 spec:
+  selector:
+    matchLabels:
+         app: redis
+         role: master
+         tier: backend
   replicas: 1
   template:
     metadata:
