--- a/deploy/nodejs.yml
+++ b/deploy/nodejs.yml
@@ -34,7 +34,7 @@ data:
       "db": "redis-service"
     }
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: nodejs
